--- a/SharpAgenda/SharpAgenda.csproj
+++ b/SharpAgenda/SharpAgenda.csproj
@@ -7,7 +7,8 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SharpAgenda</RootNamespace>
     <AssemblyName>SharpAgenda</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>10.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +22,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugType>full</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
@@ -48,15 +49,19 @@
     <Compile Include="Calendario\CalendarioCitas.cs" />
     <Compile Include="UI\VentanaPrincipal.cs" />
     <Compile Include="Notas\Nota.cs" />
+    <Compile Include="Grafico\VentanaCitasBorrar.cs" />
+    <Compile Include="Grafico\VentanaCitasListar.cs" />
+    <Compile Include="Grafico\VentanaCitasModificar.cs" />
+    <Compile Include="Grafico\VentanaCitasNueva.cs" />
+    <Compile Include="Grafico\VentanaContactosBorrar.cs" />
+    <Compile Include="Grafico\VentanaContactosBorrarCB.cs" />
+    <Compile Include="Grafico\VentanaContactosCrear.cs" />
+    <Compile Include="Grafico\VentanaContactosListar.cs" />
+    <Compile Include="Grafico\VentanaContactosModificar.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="MonoDevelop.Xml, Version=2.6.0.0, Culture=neutral">
-      <Package>monodevelop-core-addins</Package>
-    </Reference>
-    <Reference Include="System.Xml.Serialization" />
-    <Reference Include="Commons.Xml.Relaxng" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gtk-sharp-2.0</Package>
